sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: not found: value i
    for (parcours <- 0 to n-1-i){
                              ^